mojang api bridging & performance optimize
